# sr_proj_demo_1

client/: Cargo.toml  Rocket.toml
client/src/: main.rs
mpi/: .gitignore  Cargo.toml  Makefile  a.out  compute.cpp
mpi/src/: lib.rs  mpi.c
server/: Cargo.toml
server/src/: main.rs
