[package]
name = "client"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gotham = "0.5.0"
#hyper = "0.13.9"
itertools = "0.9.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
rocket = "0.4.6"
rug = "1.11.0"
#tokio = { version = "0.3.4", features = ["full"] }
