[package]
name = "mpi"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"

[lib]
crate-type=["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
rug = { version = "1.11.0", features = ["serde"] }
serde = "1.0.117"
serde_json = "1.0.59"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 3

[build-dependencies]
cc = "1.0"
