[package]
name = "server"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
rug = { version = "1.11.0", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.117"
serde_json = "1.0.59"
rayon = "1.5.0"
futures = "0.3.8"
reqwest = { version = "0.10.9", features = ["blocking"] }
